# pacer

./: .gitignore  DESIGN.md  LICENSE  README.md  pacer.py  pyproject.toml
.claude/skills/release/: SKILL.md
src/pacer/: __init__.py  __main__.py  core.py
tests/: test_pacer.py
